Fixed alignment and added notification setting show/hide

--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,7 @@ a .vpub{color:#838383;}
 	margin-left: 28px;
 }
 .nVolInp {
-	width: 115px;
+	width: 100px;
 	margin: -31px 0 0 155px;
 }
 .nVolInp .ui-slider-range {
